# knowledge_bot

./: .gitignore  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db/e7d7a421-cef6-4ccf-a2dc-20e739617e8e/: index_metadata.pickle
scripts/: ingest_data.py  test_drive_fetch.py  test_hybrid.py  test_rag.py
src/: bot.py
src/data_sources/: google_drive_fetch.py
src/rag/: chain.py  ingest.py  retriever.py
